--- a/tasks/Linux/migrate-helm-releases.yml
+++ b/tasks/Linux/migrate-helm-releases.yml
@@ -13,15 +13,16 @@
       register: helm_releases
       changed_when: false
 
-    - debug: msg="{{ helm_releases }}"
-
     - name: Migrate helm v2 releases in-place to helm v3
       shell: |
-        echo {{ helm_releases.stdout_lines }} | xargs -n1 helm 2to3 convert
+        helm 2to3 convert {{ helm_release }}
       register: result
       changed_when: "'converted successfully' in result.stdout"
       failed_when: "result.rc != 0 and 'already exists' not in result.stderr"
-      when: helm_releases.stdout != ""
+      with_items:
+        - "{{ helm_releases.stdout_lines }}"
+      loop_control:
+        loop_var: helm_release
   become: true
   when: helm_current_version.stdout.split('.')[0] > 'v2'
 
