--- a/tasks/Linux/node-setup.yml
+++ b/tasks/Linux/node-setup.yml
@@ -1,6 +1,6 @@
 ---
 - name: Join node to Kubernetes master
-  shell: |
-    {{ kubernetes_join_command }}
-  creates: /etc/kubernetes/kubelet.conf
+  shell: "{{ kubernetes_join_command }}"
+  args:
+    creates: /etc/kubernetes/kubelet.conf
   become: true
