--- a/tasks/Linux/main.yml
+++ b/tasks/Linux/main.yml
@@ -1,8 +1,8 @@
 ---
 - import_tasks: prerequisites.yml
 
-# - include_tasks: setup-RedHat.yml
-#   when: ansible_os_family == 'RedHat'
+- include_tasks: setup-RedHat.yml
+  when: ansible_os_family == 'RedHat'
 
 - include_tasks: setup-Debian.yml
   when: ansible_os_family == 'Debian'
