--- a/tasks/Linux/install-tiller.yml
+++ b/tasks/Linux/install-tiller.yml
@@ -14,5 +14,5 @@
   become: true
 
 - name: Install or upgrade tiller
-  shell: helm init --service-account=tiller --history-max 300 --upgrade --wait
+  shell: helm init --service-account=tiller --history-max 300 --tiller-connection-timeout 600 --upgrade --wait
   become: true
