--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,6 +42,9 @@ kubernetes_nfs_client_provisioner_version: 1.2.8
 kubernetes_nfs_server: nfs-server
 kubernetes_nfs_path: /ifs/kubernetes
 
+kubernetes_install_metallb: false
+kubernetes_metallb_version: 0.12.0
+
 kubernetes_install_nginx_ingress: false
 kubernetes_nginx_ingress_version: 1.41.2
 
