--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,24 +1,24 @@
 ---
-# Note that xenial repo is used for all Debian derivatives at this time.
+## Note that xenial repo is used for all Debian derivatives at this time.
 kubernetes_apt_key: https://packages.cloud.google.com/apt/doc/apt-key.gpg
 kubernetes_apt_repository: "deb http://apt.kubernetes.io/ kubernetes-xenial main"
 
-# master or node
+## master or node
 kubernetes_role: master
 
-# specific kubernetes version format as 1.18.6
+## specific kubernetes version format as 1.18.6
 kubernetes_version: latest
 # kubernetes_apiserver_advertise_address: "192.168.12.12"
 # kubernetes_ignore_preflight_errors: "all"
 kubernetes_kubeadm_init_extra_opts: ""
 kubernetes_join_command_extra_opts: ""
 
-# Note pod network cidr must be differnt with real interface network cidr.
+## Note pod network cidr must be differnt with real interface network cidr.
 kubernetes_pod_network:
-  # Flannel CNI.
+  ## Flannel CNI.
   cni: "flannel"
   cidr: "10.244.0.0/16"
-  # Calico CNI.
+  ## Calico CNI.
   # cni: 'calico'
   # cidr: '10.244.0.0/16'
 
@@ -26,18 +26,20 @@ kubernetes_set_kubeconfig_for_current_user: true
 
 kubernetes_allow_pods_on_master: true
 
-# Flannel config files.
+## Flannel config files.
 kubernetes_flannel_manifest_file: https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
 
-# Calico config files
+## Calico config files
 kubernetes_calico_manifest_file: https://docs.projectcalico.org/manifests/calico.yaml
 
-# Helm
+## Helm
+# kubernetes_helm_tiller_repo: "registry.aliyuncs.com/google_containers"
 kubernetes_helm_stable_repo_url: https://kubernetes-charts.storage.googleapis.com
 kubernetes_helm_migrate_releases: false
 
-# Kubernetes apps
-# hostpath_provisioner should be installed only for one machine k8s cluster.
+### Kubernetes apps ###
+
+## hostpath_provisioner should be installed only for one machine k8s cluster.
 kubernetes_install_hostpath_provisioner: false
 kubernetes_hostpath_provisioner_version: 0.2.9
 
