--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -49,7 +49,9 @@ kubernetes_nfs_server: nfs-server
 kubernetes_nfs_path: /ifs/kubernetes
 
 kubernetes_install_nginx_ingress: false
+kubernetes_upgrade_nginx_ingress: false
 kubernetes_nginx_ingress_version: 1.41.2
+kubernetes_nginx_ingress_external_ips: []
 
 kubernetes_install_metrics_server: false
 kubernetes_metrics_server_version: 2.11.1
