--- a/tasks/Linux/install-nfs-client-provisioner.yml
+++ b/tasks/Linux/install-nfs-client-provisioner.yml
@@ -25,4 +25,4 @@
       debug:
         msg: "{{ install_result.stdout_lines }}"
   become: true
-  when: install_status.stdout == '0'
+  when: (install_status.stdout == '0') or (kubernetes_upgrade_nfs_client_provisioner | bool)
