--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -103,4 +103,8 @@ kubernetes_jenkins_install_plugins:
   - rebuild:1.31
   - windows-slaves:1.6
   - ssh-agent:1.20
-kubernetes_jenkins_casc_scripts: {}
+kubernetes_jenkins_casc_scripts:
+  system-config: |
+    jenkins:
+      systemMessage: Welcome to our CI\CD server.
+      scmCheckoutRetryCount: 2
