--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -58,6 +58,8 @@ kubernetes_upgrade_nginx_ingress: false
 kubernetes_nginx_ingress_version: 1.41.2
 kubernetes_nginx_ingress_external_ips:
   - "{{ kubernetes_apiserver_advertise_address | default(ansible_default_ipv4.address, true) }}"
+kubernetes_nginx_ingress_tcp: {}
+kubernetes_nginx_ingress_udp: {}
 
 kubernetes_install_metrics_server: false
 kubernetes_upgrade_metrics_server: false
